# vault

./: .gitignore  .terraform.lock.hcl  README.md  main.tf  pyproject.toml
.github/workflows/: terraform.yml
infrastructure/: main.tf
infrastructure/packer/: build.pkr.hcl  main.pkr.hcl  variables.pkr.hcl
packer/: main.pkr.hcl
scripts/: build-ec2-ami.sh
