[tool.poetry]
name = "vault"
version = "0.1.0"
description = ""
authors = ["linerocks <tirtadwipa.manunggal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
